# made-modernized-6c3820b4

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  contract-promotion.yml
content/catalog/: cards.json
contracts/attestations/: README.md
contracts/attestations/audit/: _TEMPLATE.json
contracts/attestations/testnet/: _TEMPLATE.json
contracts/openapi/: README.md  made-v1.yaml
contracts/scripts/: promote-mainnet.sh  verify-attestation.sh
crates/domain/: Cargo.toml
crates/domain/src/: ai_profile.rs  battle_pass.rs  boss_definition.rs  card_definition.rs  card_pack.rs  card_token.rs  emission_pool.rs  expansion_set.rs  lib.rs  marketplace_listing.rs  match_replay.rs  matchmaking_ticket.rs  mission_attempt.rs  order.rs  outfit.rs  player_collection.rs  ranked_standing.rs  season.rs
crates/ephemeral/: Cargo.toml
crates/ephemeral/src/: config.rs  error.rs  keys.rs  lib.rs  match_state.rs  matchmaking.rs  pool.rs  pubsub.rs  session.rs
crates/ephemeral/tests/: redis_integration.rs
crates/game-session/: Cargo.toml
crates/game-session/src/: lib.rs
crates/mocks/: Cargo.toml
crates/mocks/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/persistence/src/repositories/: collection.rs  content.rs  match_play.rs  matchmaking.rs  shop.rs  solo_ai.rs  token.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/http/: catalog.rs  collection.rs  envelope.rs  identity.rs  leaderboard.rs  mod.rs  shop.rs  validate.rs
crates/server/src/ws/: hub.rs  mod.rs  protocol.rs  rng.rs
crates/server/tests/: ws_match.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
deploy/helm/made/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
deploy/helm/made/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  gateway.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: ephemeral.md
docs/superpowers/plans/: 2026-07-16-made-core-engine.md
docs/superpowers/specs/: 2026-07-16-made-content-abilities-design.md  2026-07-16-made-core-engine-design.md  2026-07-16-made-game-overview-design.md
services/data/: .dockerignore  Dockerfile  balance.json  cards.json  package.json  server.js  validate.mjs
web/: .env.example  .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/scripts/: publish-ota.sh  stage-wasm.mjs
web/src/: App.tsx  routes.tsx  styles.css  vite-env.d.ts
web/src/api/: client.test.ts  client.ts  graphql.ts  index.ts  realtime.ts  types.ts
web/src/auth/: RequireSession.tsx  SessionProvider.tsx  session.ts
web/src/components/: AppLayout.tsx
web/src/config/: api.ts  session.ts
web/src/deck/: useDeckbuilder.ts
web/src/leaderboard/: useLeaderboard.ts
web/src/match/: connection.test.ts  connection.ts  mission.ts  model.ts  reconciler.test.ts  reconciler.ts  renderer.ts  rules.test.ts  rules.ts  useMatch.ts  wasm.ts
web/src/shop/: useShop.ts
web/src/story/: useStory.ts
web/src/views/: CollectionView.tsx  HeroesView.tsx  LeaderboardView.tsx  LoginView.tsx  MarketplaceView.tsx  MatchView.tsx  RulesView.tsx  ShopView.tsx  StoryView.tsx  TokenView.tsx  WalletView.tsx
