[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/game-session",
    "crates/domain",
    "crates/mocks",
    "crates/persistence",
    "crates/ephemeral",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/taylormade7978/made-modernized-6c3820b4"

[workspace.dependencies]
# Internal crates
shared = { path = "crates/shared" }
game-session = { path = "crates/game-session" }
domain = { path = "crates/domain" }
mocks = { path = "crates/mocks" }
persistence = { path = "crates/persistence" }
ephemeral = { path = "crates/ephemeral" }

# External
actix-web = "4"
actix-ws = "0.3"
wasm-bindgen = "0.2"
