[package]
name = "game-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GameSession aggregate / rules crate. Compiles to WASM via wasm-pack for shared server/client execution."

[lib]
# cdylib for the wasm-pack build (browser/client); rlib so the actix-web
# server and the mock repositories can link the same rules on the host.
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { workspace = true }
# serde/serde_json decode the typed StartMatch command payload. Both compile to
# wasm32, so they keep the dual native/WASM build working (mirrors the domain
# aggregates, which decode their command payloads the same way).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# wasm-bindgen is optional and only pulled in for the `wasm` feature, so the
# host build (`cargo build --workspace`) stays free of wasm-only dependencies.
wasm-bindgen = { workspace = true, optional = true }

[features]
default = []
# Enabled by wasm-pack: `wasm-pack build crates/game-session -- --features wasm`
wasm = ["dep:wasm-bindgen"]
