[package]
name = "persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL persistence adapter: the sqlx migration runner (local + CI) and typed read models over the domain schema."

[lib]
crate-type = ["rlib"]

[features]
# The `#[sqlx::test]` repository suites exercise the adapters against a *live*
# Postgres (each test provisions an ephemeral database via `DATABASE_URL`). They
# are gated behind this off-by-default feature so the DB-free `build-and-test`
# CI job — which runs `cargo test --workspace` with sqlx in offline mode and no
# Postgres in reach — does not attempt to run them and panic on a missing
# `DATABASE_URL`. The `migrations` CI job, which stands up a `postgres:16`
# service, enables this feature to run them for real. Pure (DB-less) unit tests
# stay under a plain `#[cfg(test)]` and run in every job.
integration-tests = []

[[bin]]
name = "made-migrate"
path = "src/bin/migrate.rs"

[dependencies]
shared = { workspace = true }
domain = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
