[package]
name = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared DDD domain kernel: Aggregate contract, AggregateRoot base type, DomainEvent, DomainError, and Repository port."

[lib]
# rlib so every bounded-context crate can depend on the kernel; the kernel is
# WASM-safe (no host-only dependencies) so it links into the wasm-pack build too.
crate-type = ["rlib"]

[dependencies]
